--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "xhr2": "*",
-    "open": "*"
+    "open": "*",
+    "grunt": "~0.4.0",
+    "grunt-contrib-uglify": "0.2.0"
   },
   "scripts": {
     "test": "node test\\test.js"
